彩票 调整list降低到java8写法